fixing few responsible issues

--- a/index.html
+++ b/index.html
@@ -380,16 +380,22 @@
 
       <div class="section-5-bottom">
         <div class="section-5-bottom-icons">
-          <img
+          <div>
+
+            <img
             class="section-5-bottom-icons-image-left"
             src="/images/video-thumb-1.jpg"
             alt=""
-          />
-          <img
+            />
+          </div>
+          <div>
+
+            <img
             class="section-5-bottom-icons-image-right"
             src="/images/video-slide-1.jpg"
             alt=""
-          />
+            />
+          </div>
         </div>
         <div class="section-5-bottom-content">
           <div class="section-5-bottom-content-left">
