fixing few mobile issues

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             <img src="images/sponsers/sponser-7.png" alt="sponsers-logo" class="sponsers-logo">
             <img src="images/sponsers/sponser-8.png" alt="sponsers-logo" class="sponsers-logo">
             <img src="images/sponsers/sponser-9.png" alt="sponsers-logo" class="sponsers-logo">
-            <img src="images/sponsers/sponser-10.png" alt="sponsers-logo" class="sponsers-logo">
+            <img src="images/sponsers/sponser-10.png" alt="sponsers-logo" class="sponsers-logo lastsponsers">
           </div>
         </div>
 
